# Agentic-AI-Research-Assistant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  config.py  main.py
backend/agents/: analyst.py  planner.py  reporter.py  researcher.py  summarizer.py
backend/api/: routes.py
backend/export/: __init__.py  markdown_export.py  pdf_export.py
backend/graph/: __init__.py  workflow.py
backend/memory/: __init__.py  memory_manager.py
backend/schemas/: models.py  state.py
backend/services/: llm_service.py  reranker_service.py
backend/tools/: __init__.py  search_tools.py
docs/: .gitkeep  architecture.md
frontend/: Dockerfile  app.py  index.html  nginx.conf  package-lock.json  package.json
frontend/components/: log_viewer.py  progress.py  report_viewer.py  sidebar.py
frontend/src/: App.css  App.jsx
frontend/src/components/: EmptyState.jsx  LogViewer.jsx  ProgressTracker.jsx  ReportViewer.jsx  Sidebar.jsx  StatsGrid.jsx
frontend/src/utils/: api.js
frontend/utils/: __init__.py  api_client.py
tests/: test_api.py  test_export.py  test_memory.py  test_tools.py  verify_pdf.py
