[project]
name = "agentic-ai-research-assistant"
version = "1.0.0"
description = "Production-ready Agentic AI Research Assistant powered by LangGraph and OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AI Research Team" }
]

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "httpx>=0.27",
    "duckduckgo-search>=7.0",
    "wikipedia>=1.4",
    "streamlit>=1.40",
    "fpdf2>=2.8",
    "Pillow>=10.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
